VFS-3828 Fixed group resolution
